--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser-dynamic": "~8.0.3",
     "@angular/router": "~8.0.3",
     "rxjs": "~6.4.0",
+    "socket.io-client": "^2.2.0",
     "tslib": "^1.9.0",
+    "ua-parser-js": "^0.7.20",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -28,9 +30,10 @@
     "@angular/cli": "~8.0.6",
     "@angular/compiler-cli": "~8.0.3",
     "@angular/language-service": "~8.0.3",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "@types/socket.io-client": "^1.4.32",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
