--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "socket.io-client": "^2.2.0",
     "tslib": "^1.9.0",
     "ua-parser-js": "^0.7.20",
+    "uuid": "^3.3.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
@@ -35,6 +36,7 @@
     "@types/node": "~8.9.4",
     "@types/socket.io-client": "^1.4.32",
     "@types/ua-parser-js": "^0.7.33",
+    "@types/uuid": "^3.4.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
