--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.0.3",
     "rxjs": "~6.4.0",
     "socket.io-client": "^2.2.0",
+    "ts-lint": "^4.5.1",
     "tslib": "^1.9.0",
     "ua-parser-js": "^0.7.20",
     "uuid": "^3.3.2",
