--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "@types/node": "12.0.12",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
+    "apollo-boost": "^0.4.3",
     "axios": "^0.19.0",
     "emotion-theming": "^10.0.14",
+    "graphql": "^14.4.2",
     "react": "^16.8.6",
+    "react-apollo": "^2.5.8",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
@@ -43,6 +46,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/graphql": "^14.2.2",
     "@types/react-redux": "^7.1.1",
     "@types/react-router-dom": "^4.3.4",
     "@types/redux": "^3.6.0",
