--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
     "apollo-boost": "^0.4.3",
+    "apollo-cache-inmemory": "^1.6.2",
+    "apollo-link-http": "^1.5.15",
     "axios": "^0.19.0",
     "emotion-theming": "^10.0.14",
     "graphql": "^14.4.2",
