Install and configure clent to use apolloprovider as apollohooksprovider in the lead client as a child of the apolloprovider from the react-apollo library

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graphql": "^14.4.2",
     "react": "^16.8.6",
     "react-apollo": "^2.5.8",
+    "react-apollo-hooks": "^0.4.5",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
