--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-apollo": "^2.5.8",
     "react-apollo-hooks": "^0.4.5",
     "react-dom": "^16.8.6",
+    "react-particles-js": "^2.6.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
