--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "emotion-theming": "^10.0.14",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
+    "json-pretty-html": "^1.1.6",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-apollo": "^2.5.8",
