--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "graphql-tag": "^2.10.1",
     "json-pretty-html": "^1.1.6",
     "moment": "^2.24.0",
+    "next": "^9.0.1",
     "react": "^16.8.6",
     "react-apollo": "^2.5.8",
     "react-apollo-hooks": "^0.4.5",
