Set redux up with Next JS

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "json-pretty-html": "^1.1.6",
     "moment": "^2.24.0",
     "next": "^9.0.1",
+    "next-redux-wrapper": "^3.0.0-alpha.3",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-apollo": "^2.5.8",
@@ -47,6 +48,7 @@
     "@types/cookie": "^0.3.3",
     "@types/graphql": "^14.2.2",
     "@types/moment": "^2.13.0",
+    "@types/next-redux-wrapper": "^2.0.2",
     "@types/react-redux": "^7.1.1",
     "@types/react-router-dom": "^4.3.4",
     "@types/redux": "^3.6.0",
