--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "typescript": "3.5.3"
+    "typescript": "^3.5.3"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
@@ -53,7 +53,8 @@
     "@types/react-router-dom": "^4.3.4",
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
-    "@types/redux-thunk": "^2.1.0"
+    "@types/redux-thunk": "^2.1.0",
+    "tslint": "^5.18.0"
   },
   "author": "Eric Zorn <zornwebdev@gmail.com>",
   "license": "ISC"
