--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "axios": "^0.19.0",
     "cookie": "^0.4.0",
     "emotion-theming": "^10.0.14",
+    "express": "^4.17.1",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "isomorphic-unfetch": "^3.0.0",
     "json-pretty-html": "^1.1.6",
     "moment": "^2.24.0",
+    "morgan": "^1.9.1",
     "next": "^9.0.1",
     "next-redux-wrapper": "^3.0.0-alpha.3",
     "prop-types": "^15.7.2",
@@ -46,8 +48,10 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/cookie": "^0.3.3",
+    "@types/express": "^4.17.0",
     "@types/graphql": "^14.2.2",
     "@types/moment": "^2.13.0",
+    "@types/morgan": "^1.7.36",
     "@types/next-redux-wrapper": "^2.0.2",
     "@types/react-redux": "^7.1.1",
     "@types/react-router-dom": "^4.3.4",
