--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,6 @@
 {
-  "presets": ["next/babel", "@zeit/next-typescript/babel"]
+  "presets": [
+    "next/babel",
+    "@zeit/next-typescript/babel"
+  ]
 }
