--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "generate-gql": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@apollo/react-hooks": "^0.1.0-beta.10",
@@ -46,6 +47,10 @@
     "typescript": "^3.5.3"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.4.0",
+    "@graphql-codegen/typescript": "1.4.0",
+    "@graphql-codegen/typescript-operations": "1.4.0",
+    "@graphql-codegen/typescript-react-apollo": "1.4.0",
     "@types/axios": "^0.14.0",
     "@types/cookie": "^0.3.3",
     "@types/express": "^4.17.0",
@@ -58,6 +63,10 @@
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/redux-thunk": "^2.1.0",
+    "graphql-code-generator": "^0.18.2",
+    "graphql-codegen-typescript-client": "^0.18.2",
+    "graphql-codegen-typescript-common": "^0.18.2",
+    "graphql-codegen-typescript-react-apollo": "^0.18.2",
     "tslint": "^5.18.0"
   },
   "author": "Eric Zorn <zornwebdev@gmail.com>",
