--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "graphql-codegen-typescript-react-apollo": "^0.18.2",
     "nodemon": "^1.19.1",
     "rollup": "^1.18.0",
+    "ts-lint": "^4.5.1",
     "ts-node": "^8.3.0",
     "ts-node-dev": "^1.0.0-pre.40",
     "tslint": "^5.18.0"
