--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "apollo-link-http": "^1.5.15",
     "axios": "^0.19.0",
     "cookie": "^0.4.0",
+    "cors": "^2.8.5",
     "emotion-theming": "^10.0.14",
     "express": "^4.17.1",
     "graphql": "^14.4.2",
@@ -45,7 +46,8 @@
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "typescript": "^3.5.3"
+    "typescript": "^3.5.3",
+    "ua-parser-js": "^0.7.20"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.4.0",
