Adding additional styles for the main layout  component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,5 @@
     "noUnusedParameters": false
   },
   "exclude": ["node_modules"],
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"]
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "pages/__document.js"]
 }
