--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "graphql-codegen-typescript-common": "^0.18.2",
     "graphql-codegen-typescript-react-apollo": "^0.18.2",
     "nodemon": "^1.19.1",
+    "prettier": "^1.18.2",
     "rollup": "^1.18.0",
     "ts-lint": "^4.5.1",
     "ts-node-dev": "^1.0.0-pre.40",
