--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-sharp": "^2.2.13",
     "gatsby-plugin-typescript": "^2.1.5",
     "gatsby-source-filesystem": "^2.1.11",
+    "gatsby-source-graphql": "^2.1.11",
     "gatsby-transformer-sharp": "^2.2.7",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
@@ -20,12 +21,16 @@
     "react-helmet": "^5.2.1",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.1",
     "@types/node": "^12.7.2",
+    "@types/react-redux": "^7.1.2",
     "@types/redux": "^3.6.0",
+    "@types/redux-devtools-extension": "^2.13.2",
+    "@types/redux-thunk": "^2.1.0",
     "prettier": "^1.18.2"
   },
   "keywords": [
