--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "apollo-boost": "^0.4.4",
+    "apollo-cache-inmemory": "^1.6.3",
+    "date-fns": "^2.0.1",
+    "fetch": "^1.1.0",
     "gatsby": "^2.13.73",
     "gatsby-image": "^2.2.10",
     "gatsby-plugin-manifest": "^2.2.6",
@@ -15,6 +19,7 @@
     "gatsby-source-filesystem": "^2.1.11",
     "gatsby-source-graphql": "^2.1.11",
     "gatsby-transformer-sharp": "^2.2.7",
+    "isomorphic-unfetch": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
@@ -25,6 +30,7 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.1",
     "@types/node": "^12.7.2",
     "@types/react-redux": "^7.1.2",
