--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "Eric Zorn Portfolio",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A personal portfolio built in React, Redux, GraphQL, Apollo, and Apollo Server",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Eric Zorn <zornwebdev@gmail.com>",
   "dependencies": {
     "apollo-boost": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.3",
@@ -19,6 +19,7 @@
     "gatsby-source-filesystem": "^2.1.11",
     "gatsby-source-graphql": "^2.1.11",
     "gatsby-transformer-sharp": "^2.2.7",
+    "graphql": "^14.5.4",
     "isomorphic-unfetch": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
@@ -31,6 +32,8 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.6.1",
+    "@graphql-codegen/typescript": "^1.6.1",
     "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.1",
     "@types/node": "^12.7.2",
@@ -50,7 +53,8 @@
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \"",
+    "generate": "graphql-codegen"
   },
   "repository": {
     "type": "git",
