--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/redux-thunk": "^2.1.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-ava": "^8.0.0",
     "prettier": "^1.18.2"
   },
   "keywords": [
