--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/redux-thunk": "^2.1.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-ava": "^8.0.0",
+    "graphql-code-generator": "^0.18.2",
     "prettier": "^1.18.2"
   },
   "keywords": [
