--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-source-graphql": "^2.1.11",
     "gatsby-transformer-sharp": "^2.2.7",
     "graphql": "^14.5.4",
+    "graphql-tag": "^2.10.1",
     "isomorphic-unfetch": "^3.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
