--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-apollo": "^3.0.1",
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
