--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/express": "^4.17.1",
     "@types/graphql": "^14.5.0",
     "@types/node": "^12.7.2",
+    "@types/react-icons": "^3.0.0",
     "@types/react-redux": "^7.1.2",
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
