--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
     "react-redux": "^7.1.1",
+    "react-spring": "^8.0.27",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
