--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^16.9.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.7.0",
+    "react-particles-js": "^2.7.0",
     "react-redux": "^7.1.1",
     "react-spring": "^8.0.27",
     "redux": "^4.0.4",
