--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "graphql": "^14.5.4",
     "graphql-tag": "^2.10.1",
     "isomorphic-unfetch": "^3.0.0",
+    "json-pretty-html": "^1.1.6",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-apollo": "^3.0.1",
