--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "new-frontend",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.1",
@@ -35,6 +35,8 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^1.7.0",
     "@graphql-codegen/typescript": "1.7.0",
+    "@graphql-codegen/typescript-operations": "1.7.0",
+    "@graphql-codegen/typescript-react-apollo": "1.7.0",
     "@types/date-fns": "^2.6.0",
     "@types/express": "^4.17.1",
     "@types/graphql": "^14.5.0",
@@ -51,9 +53,7 @@
     "graphql-codegen-typescript-client": "^0.18.2",
     "graphql-codegen-typescript-common": "^0.18.2",
     "graphql-codegen-typescript-react-apollo": "^0.18.2",
-    "prettier": "^1.18.2",
-    "@graphql-codegen/typescript-operations": "1.7.0",
-    "@graphql-codegen/typescript-react-apollo": "1.7.0"
+    "prettier": "^1.18.2"
   },
   "scripts": {
     "start": "react-scripts start",
