--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^16.9.0",
     "react-apollo": "^3.0.1",
     "react-dom": "^16.9.0",
+    "react-hooks": "^1.0.1",
     "react-particles-js": "^2.7.0",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
@@ -50,6 +51,7 @@
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/redux-thunk": "^2.1.0",
     "@types/ua-parser-js": "^0.7.33",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "graphql-code-generator": "^0.18.2",
     "graphql-codegen-typescript-client": "^0.18.2",
     "graphql-codegen-typescript-common": "^0.18.2",
