--- a/codegen.yml
+++ b/codegen.yml
@@ -8,6 +8,6 @@ generates:
       - 'typescript-operations'
       - 'typescript-react-apollo'
     config:
-      withHOC: false
-      withComponent: false
+      withHOC: true
+      withComponent: true
       withHooks: true
