--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.3",
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.22",
+    "apollo-boost": "^0.4.4",
     "emotion-theming": "^10.0.19",
     "gatsby": "^2.17.4",
     "gatsby-image": "^2.2.29",
@@ -21,6 +23,8 @@
     "gatsby-source-graphql": "^2.1.20",
     "gatsby-transformer-remark": "^2.6.30",
     "gatsby-transformer-sharp": "^2.3.0",
+    "isomorphic-fetch": "^2.2.1",
+    "isomorphic-unfetch": "^3.0.0",
     "node-sass": "^4.13.0",
     "prop-types": "^15.7.2",
     "react": "^16.11.0",
