--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@types/isomorphic-fetch": "0.0.35",
     "@types/node": "^12.11.7",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
