--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "portfolio",
   "private": true,
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "1.0.2",
@@ -22,6 +22,7 @@
     "gatsby-plugin-sass": "^2.1.20",
     "gatsby-plugin-sharp": "^2.2.32",
     "gatsby-plugin-typescript": "^2.1.15",
+    "gatsby-source-contentful": "^2.1.54",
     "gatsby-source-filesystem": "^2.1.35",
     "gatsby-source-graphql": "^2.1.20",
     "gatsby-transformer-remark": "^2.6.30",
