--- a/.gitignore
+++ b/.gitignore
@@ -98,6 +98,7 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+codegen.yml
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache/
