--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "portfolio",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A portfolio template for front-end, back-end, or full-stack developers.",
   "version": "1.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Eric Zorn <zornwebdev@gmail.com>",
   "dependencies": {
+    "@apollo/react-components": "^3.1.3",
+    "@apollo/react-hoc": "^3.1.3",
     "@apollo/react-hooks": "^3.1.3",
     "@emotion/core": "^10.0.22",
     "@emotion/styled": "^10.0.22",
+    "@graphql-codegen/typescript": "^1.8.3",
+    "@graphql-codegen/typescript-resolvers": "^1.8.3",
     "apollo-boost": "^0.4.4",
     "apollo-link": "^1.2.13",
     "apollo-link-http": "^1.5.16",
@@ -27,6 +31,7 @@
     "gatsby-source-graphql": "^2.1.20",
     "gatsby-transformer-remark": "^2.6.30",
     "gatsby-transformer-sharp": "^2.3.0",
+    "graphql": "^14.5.8",
     "isomorphic-fetch": "^2.2.1",
     "isomorphic-unfetch": "^3.0.0",
     "node-sass": "^4.13.0",
@@ -40,6 +45,10 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.8.3",
+    "@graphql-codegen/typescript-operations": "^1.8.3",
+    "@graphql-codegen/typescript-react-apollo": "^1.8.3",
+    "@types/graphql": "^14.5.0",
     "@types/isomorphic-fetch": "0.0.35",
     "@types/node": "^12.11.7",
     "@types/react": "^16.9.11",
@@ -61,7 +70,8 @@
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "generate": "graphql-codegen --config codegen.yml"
   },
   "repository": {
     "type": "git",
