Update .gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -98,6 +98,8 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+
+# GraphQL Codegen
 codegen.yml
 
 # parcel-bundler cache (https://parceljs.org/)
