--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.8.0",
     "react-redux": "^7.1.1",
+    "react-spring": "^8.0.27",
+    "react-switch": "^5.0.1",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
@@ -54,6 +57,7 @@
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
     "@types/react-helmet": "^5.0.13",
+    "@types/react-icons": "^3.0.0",
     "@types/react-redux": "^7.1.5",
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
