--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/redux-thunk": "^2.1.0",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "ts-lint": "^4.5.1"
   },
   "keywords": [
     "gatsby"
