--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "ericzornportfolio",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "private": true,
   "author": {
     "name": "Eric Zorn",
     "email": "zornwebdev@gmail.com",
     "url": "https://github.com/ericzorn93"
   },
+  "description": "Next JS Version of my portfolio with GraphQL, Apollo, Redux, and TypeScript.",
   "engines": {
     "node": ">=12.0.0"
   },
