--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.17.1",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
+    "moment": "^2.24.0",
     "next": "9.1.6",
     "next-apollo": "^3.1.10",
     "next-redux-wrapper": "^4.0.1",
@@ -59,6 +60,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.2",
     "@types/graphql": "^14.5.0",
+    "@types/moment": "^2.13.0",
     "@types/next": "^9.0.0",
     "@types/next-redux-wrapper": "^3.0.0",
     "@types/node": "^12.12.20",
