--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next-redux-wrapper": "^4.0.1",
     "next-with-apollo": "^4.3.0",
     "node-sass": "^4.13.0",
+    "postcss-preset-env": "^6.7.0",
     "react": "^16.12.0",
     "react-dom": "16.12.0",
     "react-icons": "^3.8.0",
@@ -49,6 +50,7 @@
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
+    "tailwindcss": "^1.1.4",
     "uuid": "^3.3.3",
     "webpack": "^4.41.3",
     "yup": "^0.28.0"
