--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "16.12.0",
     "react-icons": "^3.8.0",
     "react-redux": "^7.1.3",
+    "react-spinners": "^0.7.2",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
